--- a/src/style/Global.scss
+++ b/src/style/Global.scss
@@ -1,3 +1,25 @@
 body {
-    margin: 0 auto;
+  margin: 0 auto;
+}
+
+input {
+  border: 0;
+  border-bottom: 1px solid #ddd;
+  outline: none;
+  height: 30px;
+  padding: 3px;
+  width: 200px;
+  margin: 5px;
+}
+button {
+  border: 0;
+  background: #ddd;
+  height: 40px;
+  margin: 5px;
+  width: 80px;
+  border-radius: 5px;
+}
+button:active {
+  background: black;
+  color: white;
 }
