--- a/src/components/Nav/NavBar.scss
+++ b/src/components/Nav/NavBar.scss
@@ -1,25 +1,28 @@
-.nav{
+.container{
     width: 100%;
-    height: 60px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: row;
-    & .logo{
-        h1{
-            a{
-                display: block;
-                padding: 17px;
-            }
-        }
-    }
-    & ul{
+    .nav{
+        width: 100%;
+        height: 60px;
         display: flex;
         justify-content: space-around;
         align-items: center;
         flex-direction: row;
-        li{
-            margin-right: 20px;
+        & .logo{
+            h1{
+                a{
+                    display: block;
+                    padding: 17px;
+                }
+            }
+        }
+        & ul{
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            flex-direction: row;
+            li{
+                margin-right: 20px;
+            }
         }
     }
 }
