--- a/src/components/Nav/NavBar.scss
+++ b/src/components/Nav/NavBar.scss
@@ -1,17 +1,23 @@
 .container{
-    border: 1px solid red;
+    // border: 1px solid blue;
+    background-color: #212020;
+    box-shadow:  3px 3px 10px rgba(0, 0, 0, 0.3);
+    width: 100%;
+    height: 100%;
     .nav{
         width: 100%;
-        height: 60px;
+        height: 70px;
         display: flex;
         justify-content: space-around;
         align-items: center;
         flex-direction: row;
+        color: #fff;
         & .logo{
             h1{
                 a{
                     display: block;
                     padding: 17px;
+                    color: #fff;
                 }
             }
         }
@@ -22,6 +28,10 @@
             flex-direction: row;
             li{
                 margin-right: 20px;
+                a{
+                    color: #fff;
+                    font-weight: bold;
+                }
             }
         }
     }
